src/test/resources/invalid/typecheck/This_ReturnsVoid.vas
class Main is
    var a : Integer = 0
    this() is
        this().a
    end
end